# neuro-chat-elo

./: .gitignore  .gitmodules  CNAME  Cargo.toml  LICENSE  README.md  TODO.md  bilibililivestreamchat.json  bits-only.json  chat-only.json  copypasta.json  discordlivestream.json  index.html  nonvips.json  overall.json  partners-only.json  stage.sh  stage_python.sh  subs-only.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: backfill-python.yml  backfill-rust.yml  backfill.yml  compile-rust  compile-rust.yml  trigger-python.yml  trigger-rust.yaml  trigger.yaml  trigger.yml
_app/: version.json
_app/immutable/assets/: 0.BFkZL0JX.css  0.BfCZoPVl.css  0.BjUc_sih.css  0.BvG2Lpys.css  0.CqDRxgn8.css  0.CzllMPSN.css  0.Dwdcqsxm.css  0.eIwi4E0U.css  0.scqnmHvY.css  2.CMrhVmyl.css  _layout.5QfqSudr.css  _layout.BN8rUdcb.css  _layout.DCbgepqu.css  _layout.DFZz85lP.css  _page.8cerNU_8.css
_app/immutable/chunks/: entry.9nIi8Xoi.js  entry.AdoMQ3rA.js  entry.B01S5ric.js  entry.B3jt5L4z.js  entry.B4NX88OM.js  entry.BBT49JMq.js  entry.BDg8Nk0S.js  entry.BGpKWaVH.js  (+76 more)
app_state/: Cargo.toml
app_state/src/: lib.rs
chatdownloader/: .gitignore  Cargo.toml  chatparser.py  pyproject.toml  twitchdownloaderproxy.py
chatdownloader/src/: _constants.rs  backfill.py  backfill.rs  chatlogprocessor.py  chatlogprocessor.rs  consts.py  main.py  main.rs  stream_end_listener.py  twitch_utils.py  twitch_utils.rs  twitchdownloaderproxy.py  twitchdownloaderproxy.rs
chatdownloader/src/_types/: __init__.py  clptypes.py  clptypes.rs  leaderboardtypes.py  leaderboardtypes.rs  mod.rs  twitchtypes.rs
chatdownloader/src/leaderboards/: __init__.py  abstractleaderboard.py  bitsonly.py  bitsonly.rs  chatonly.py  chatonly.rs  copypastaleaders.py  copypastaleaders.rs  leaderboardtrait.rs  mod.rs  nonvips.py  nonvips.rs  overall.py  overall.rs  subsonly.rs
chatdownloader/src/metadata/: __init__.py  abstractmetadata.py  badges.py  badges.rs  basic_info.rs  metadatatrait.rs  mod.rs  special_role.rs
chatdownloader/src/metrics/: abstractmetric.py  bits.py  bits.rs  copypastaleader.py  copypastaleader.rs  emote.py  emote.rs  metrictrait.rs  mod.rs  subs.py  subs.rs  text.py  text.rs
clients/: Cargo.toml
clients/src/: lib.rs  null_client.rs
lbo/: Cargo.toml
lbo/src/: exporter.rs  filter.rs  lib.rs  message.rs  performances.rs  scoring.rs  sources.rs
live-elo/: Cargo.toml
live-elo/src/: config.rs  exporter.rs  filter.rs  lib.rs  main.rs  performances.rs  scoring.rs  sources.rs
live-elo/src/exporter/: elo_calculator.rs  shared_processor.rs  websocket.rs
live-elo/src/sources/: bilibili.rs  discord.rs  twitch.rs
models/: leaderboardExportTypes.proto
optout/: README.md  pyproject.toml
optout/optout-setup/: .env.template  discord_setup.py  main.py  pyproject.toml  readme.md  twitch_setup.py
optout/optout-worker/: .env.template  .prettierrc  README.md  setup.sh  worker-configuration.d.ts  wrangler.toml
optout/optout-worker/src/: cloudflareHelpers.ts  command.ts  discord.ts  discordTypes.ts  errors.ts  firebase.ts  index.ts  twitch.ts  twitchOLD.ts  twitchV2.ts
optout/optout-worker/src/twitch/: twitch.ts  twitchV2.ts
optout/src/: discord_bot.py  main.py  twitch_bot.py
python-chatdownloader/: pyproject.toml
python-chatdownloader/src/: backfill.py  chatlogprocessor.py  main.py  stream_end_listener.py
rust/: Cargo.toml
rust/adventures_utils/: Cargo.toml
rust/bili_utils/: Cargo.toml
rust/chatdownloader/: Cargo.toml
rust/chatdownloader/src/: adventuresdownloaderproxy.rs  backfill.rs  bilidownloaderproxy.rs  chatlogprocessor.rs  discorddownloaderproxy.rs  github.rs  main.rs  optout.rs  twitchdownloaderproxy.rs
rust/chatdownloader/src/leaderboards/: leaderboardtrait.rs
rust/chatdownloader/src/metadata/: basic_info.rs
rust/discord_utils/: Cargo.toml
rust/discord_utils/src/: lib.rs  types.rs
rust/elo/: Cargo.toml  build.rs
rust/elo/src/: _constants.rs  lib.rs
rust/elo/src/_types/: clptypes.rs  leaderboardtypes.rs  mod.rs
rust/elo/src/leaderboards/: adventures_farm.rs  bilibililivestreamchat.rs  bitsonly.rs  casual_pxls.rs  chatonly.rs  copypastaleaders.rs  discordlivestreamchat.rs  ironmouse_canvas_chat.rs  ironmouse_pxls.rs  leaderboardtrait.rs  mod.rs  nonvips.rs  overall.rs  partnersonly.rs  positive.rs  subsonly.rs  topemote.rs
rust/elo/src/metadata/: badges.rs  basic_info.rs  chat_origin.rs  is_bilibili_chat.rs  is_discord_chat.rs  metadatatrait.rs  mod.rs  special_role.rs
rust/elo/src/metrics/: bits.rs  copypastaleader.rs  emote.rs  emoteuse.rs  metrictrait.rs  mod.rs  score.rs  sentiment.rs  subs.rs  text.rs
rust/live-elo/: Cargo.toml
rust/live-elo/src/: main.rs  provider.rs
rust/live-elo/src/provider/: twitch.rs
rust/optout/: Cargo.toml
rust/pxls_utils/: Cargo.toml
rust/twitch_utils/: Cargo.toml
rust/twitch_utils/src/: lib.rs  seventvclient.rs  seventvtypes.rs  twitchtypes.rs
timeout-standalone/: Cargo.toml
timeout-standalone/models/: unpolished_evil.rpw  unpolished_neuro.rpw
timeout-standalone/src/: lib.rs  main.rs
timeout-standalone/src/aggregator/: mod.rs  sliding_window.rs
timeout-standalone/src/chat/: mod.rs
timeout-standalone/src/detection/: mod.rs
timeout-standalone/src/stream/: consts.rs  livestream.rs  local.rs  mod.rs  traits.rs  vod.rs
timeout-triager/: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  waveform_visualizer.cpp  waveform_visualizer.hpp
timeout-triager/src/: main.cpp  utils.cpp  utils.hpp
timeout-triager/src/components/: waveform_visualizer.cpp  waveform_visualizer.hpp
timeout-triager/src/controllers/: timeout_triager_controller.cpp  timeout_triager_controller.hpp  triage_folder_controller.cpp  triage_folder_controller.hpp
timeout-triager/src/model/: training_files_model.cpp  training_files_model.hpp
web/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
web/src/: app.html
websocket-shared/: Cargo.toml
websocket-shared/src/: lib.rs
(+274 files in other folders)
