[package]
name = "chatdownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = {version = "0.12.5", features = ["json", "blocking"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = {version = "1.38.0", features = ["full"]}
twitch_api = { version = "0.7.0-rc.7", features = ["client", "helix"] }
zip = "2.1.3"
