[package]
name = "chatdownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
log = "0.4.21"
regex = "1.10.5"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
statrs = "0.17.1"
tempfile = "3.10.1"
tokio = {version = "1.38.0", features = ["full"]}
zip = "2.1.3"
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }