[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatdownloader"
version = "0.1.0"
description = "Downloads chat from the latest VOD"
authors = ["vanorsigma"]

[tool.poetry.dependencies]
python = "^3.10.12"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "*"

# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
