[package]
name = "live-elo"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["ws"] }
lbo = { path = "../lbo/" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
static_init = "1.0.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twelf = { version = "0.15.0", features = ["default_trait", "yaml"] }
twitch-irc = "5.0.1"
websocket-shared = { path = "../websocket-shared/" }
app_state = { path = "../app_state/" }
