[package]
name = "timeout-standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.22"
rustpotter = "3.0.2"
tokio = { version = "1.38.0", features = ["sync", "signal", "rt-multi-thread", "rt"] }
tokio-stream = "0.1.15"
twitch-irc = "5.0.1"
