[tool.poetry]
name = "optout-setup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"
twitchAPI = "^4.2.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
aiohttp = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
