[package]
name = "chatdownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
dotenv = "0.15.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = {version = "1.38.0", features = ["full"]}
zip = "2.1.3"
env_logger = "0.11.3"
elo = { path = "../elo/" }
twitch_utils = { path = "../twitch_utils/" }
discord_utils = { path = "../discord_utils/" }
optout = { path = "../optout/"}
chrono = "0.4.38"
