[package]
name = "chatdownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
dotenv = "0.15.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = {version = "1.38.0", features = ["full"]}
zip = "2.1.3"
env_logger = "0.11.3"
elo = { path = "../elo/" }
twitch_utils = { path = "../twitch_utils/" }
discord_utils = { path = "../discord_utils/" }
bili_utils = { path = "../bili_utils/" }
adventures_utils = { path = "../adventures_utils/" }
pxls_utils = { path = "../pxls_utils/" }
chrono = "0.4.38"
anyhow = "1.0.86"
futures = "0.3.30"
itertools = "0.13.0"
