[package]
name = "discord_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = "1.40.0"
