[package]
name = "elo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
log = "0.4.21"
tokio = {version = "1.38.0", features = ["full"]}
futures = "0.3.30"
dotenv = "0.15.0"
lazy_static = "1.5.0"
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }
strum = { version = "0.26.3", features = ["derive"] }
env_logger = "0.11.3"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
regex = "1.10.5"
