[package]
name = "elo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
prost-build = "0.13.1"

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
log = "0.4.21"
tokio = {version = "1.40.0", features = ["full"]}
futures = "0.3.30"
lazy_static = "1.5.0"
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
regex = "1.10.5"
twitch_utils = { path = "../twitch_utils/" }
discord_utils = { path = "../discord_utils/" }
prost = "0.13.1"
prost-types = "0.13.1"
itertools = "0.13.0"
