[package]
name = "live-elo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
dotenv = "0.15.0"
elo = { path = "../elo/" }
twitch_utils = { path = "../twitch_utils/" }
twitch-irc = "5.0.1"
log = "0.4.21"
env_logger = "0.11.3"
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
