[package]
name = "twitch_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.22"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
serde = { version = "1.0.204", features = ["derive"] }
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }
