[package]
name = "twitch_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
reqwest = {version = "0.11.27", features = ["json", "blocking"]}
serde = { version = "1.0.204", features = ["derive"] }
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }
chrono = "0.4.38"
regex = "1.10.6"
lazy_static = "1.5.0"
serde_json = "1.0.125"
